# autoclean-pro

./: .dockerignore  .gitattributes  .gitignore  Architecture Diagram  Dockerfile  README.md  baseline.py  environment.py  generate_data.py  inference.py  logic.py  models.py  openenv.yaml  pyproject.toml  requirements.in  requirements.txt  test_api.py  test_autoclean.py
data/: easy_clean.csv  easy_dirty.csv  hard_clean.csv  hard_dirty.csv  med_clean.csv  med_dirty.csv
server/: app.py
